src/style/App.css
/* ... */
.loading-section.delayed {
  opacity: 0;
  padding-top: 10px;
  visibility: hidden;
}

.btn-link:hover {
  cursor: pointer;
}

.form-text.shrink-me {
  cursor: default;
}

/*
  Generic classes for fade-in/rise-up animation
*/

.fade-in {
  animation: fadein 0.5s;
}

.fade-rise {
  animation: fadein-riseup 0.5s;
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadein-riseup {
  from {
    opacity: 0;
    padding-top: 15px;
  }
  to {
    opacity: 1;
    padding-top: 0px;
  }
}

/* Navbar / user info styling */

.navbar {
  padding: 0 1rem;
  overflow: hidden;
}

.navbar .container {
  margin: 0.5rem auto;
}

.navbar .container img:first-child {
  align-self: flex-start;
  margin-right: 0.5rem;
  height: auto;
  width: 30px;
  /* margin-top: -0.5rem; */
}

.navbar-brand a {
  text-decoration: none;
  color: inherit;
}

#user {
  justify-self: end;
  align-items: center;
  display: flex;
  background: rgb(24, 24, 24);
  position: relative;
  padding: 1rem;
  margin: -1rem 0;
  margin-left: auto;
  color: white;
  max-width: 260px;
}

#user:hover {
  cursor: pointer;
}

#avatar {
  border-radius: 100%;
  width: 32px;
  height: 32px;
}

#userData {
  font-weight: 500;
  margin: 0 10px;
  overflow: hidden;
  text-overflow: clip;
  max-height: 48px;
}

#user #discriminator {
  font-weight: 300;
  color: rgb(170, 170, 170);
}

.logInOrOut {
  transition: color 0.2s;
  color: rgba(255, 255, 255, 0.7);
}

.logInOrOut:hover {
  color: rgba(255, 255, 255, 0.9);
  text-decoration: none;
}

.logInOrOut span {
  margin-left: 2px;
}

.logInOrOut img {
  height: 24px;
  width: 24px;
}

.nav-overlay {
  transition: background-color 0.3s;
  background-color: none;
  position: fixed;
  height: 0;
  width: 0;
  left: 0;
  top: 0;
}

/* Vote flow styling */

.contest-section-header {
  color: white;
  background-color: rgba(0, 0, 0, 0.8);
  letter-spacing: 0.05em;
  border-radius: 1rem;
  padding: 1.5rem;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.contest-section-header h3 {
  font-weight: bold;
  margin: 0;
  margin-bottom: 0.25rem;
}

.contest_section .category {
  margin-top: 3.5rem;
}

.contest-section-header + .category {
  margin-top: 2rem;
}

.contest-section-header .closed-vote-warning {
  margin: 0;
  margin-top: 12px;
  color: #bdcfff;
  font-size: 17px;
}

.contest-section-header > button {
  margin-left: auto;
}

.results section:first-of-type .section-header {
  margin-top: 2rem;
}

.contest_section {
  margin-top: 8rem;
}

#floating-toc-btn + .contest_section {
  margin-top: 1.5rem !important;
}

.category h6 {
  margin: 1rem 0 0.5rem 0;
  line-height: 1.5rem;
  color: rgba(0, 0, 0, 0.7);
  font-weight: 400;
}

.category h5 {
  margin-bottom: 0.75rem;
}

.entries .single-field-card {
  margin: 6px 4px;
}

.entries .single-field-card .card-title {
  font-size: 18px !important;
}

.entries .single-field-card .card-body {
  padding: 12px 18px;
}

.vote-flow {
  position: relative;
}

.vote-flow .card:hover {
  cursor: pointer;
}

.vote-flow .bg-primary .card-subtitle {
  color: rgb(203, 207, 248);
}

.img-only-card {
  /* min-width: 120px;
  min-height: 120px;
  max-width: 120px;
  max-height: 120px; */
  width: 120px !important;
  height: 120px !important;
  border-radius: 0.25rem;
  padding: 0.5rem;
}

.img-only-card img {
  min-width: 80px;
  min-height: 80px;
  width: auto;
  height: auto;
  max-width: calc(120px - 1rem);
  max-height: calc(120px - 1rem);
  margin: auto;
}

.single-fields {
  justify-content: space-between;
  margin-top: 0.75rem;
}

.single-fields .card {
  flex-grow: 1;
  text-align: center;
}

.single-fields:not(.image-only-fields)::after {
  content: '';
  flex-grow: 100000;
}

.contest-collapser {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  min-width: 200px;
}

.slash-divider {
  color: #c2cdd6;
  font-weight: bold;
  padding: 0 0.2rem;
}

.unsubmitted-count {
  color: #007bff;
  cursor: pointer;
  transition: color 0.3s;
}

.unsubmitted-count:hover {
  text-decoration: underline;
  color: #065bb6;
}

.category ol {
  animation: fadein 0.5s;
  background: rgba(9, 145, 236, 0.1);
  border-radius: 0.5rem;
  padding: 1rem;
  z-index: 20;
}

.category ol li {
  list-style: none;
  margin: 0.2rem 0.5rem;
  color: #04525f;
}

.category ol li span {
  color: #0c8fa5;
  margin-left: 0.2rem;
  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.1);
}

/* Table of contents */

.toc li[data-content]::before {
  content: attr(data-content);
}

.toc {
  overflow-y: scroll;
  position: fixed;
  left: 0;
  top: 0;
  height: 100vh;
  /* z-index: 50; */
  /* Version that draws above navbar */
  z-index: 1050;
  width: 100%;
  min-width: 240px;
  max-width: 380px;
  padding: 1rem;
  transform: translateX(-100%);
  transition: transform 0.3s;
  background: rgb(40, 40, 40);
  /* margin: 0; */
}

.toc li {
  list-style: none;
  /* margin-top: 0.8rem; */
  cursor: pointer;
  color: rgb(180, 180, 180);
}

.toc li:hover {
  color: rgb(255, 255, 255);
  background: rgb(48, 48, 48);
}

.toc-entry {
  font-weight: bold;
}

.toc ol {
  padding-left: 0;
}

.toc li {
  padding: 0.5rem;
  padding-left: 1rem;
  border-radius: 8px;
}

.toc-entry + ol li {
  margin-left: 1.5rem;
}

.toc-entry + ol li:last-of-type {
  margin-bottom: 2rem;
}

.toc-click {
  transition: background-color 0.3s;
  background-color: none;
  position: fixed;
  /* z-index: 49; */
  /* Version that draws above navbar */
  z-index: 1049;
  height: 0;
  width: 0;
  left: 0;
  top: 0;
}

.toc.expanded {
  transform: translateX(0);
  box-shadow: 4px 0px 10px rgba(0, 0, 0, 0.5);
}

.toc-click.expanded {
  background-color: rgba(0, 0, 0, 0.5);
  width: 100vw;
  height: 100vh;
}

#floating-toc-btn {
  position: fixed;
  right: 1rem;
  bottom: 1rem;
  border-radius: 0.25rem;
  z-index: 1048;
}

#floating-toc-btn button {
  padding: 0.5rem;
  margin: auto;
  width: fit-content;
}

#floating-toc-btn img {
  margin: auto;
}
/* ... */

